@@ -6,6 +6,8 @@ version 0.995
 - fix bug: datafile name was not being cleared on Close Session
 - refinements to Makefiles: don't expand CFLAGS multiple times
 - handle spaces in filenames when stacking the "open" command
+- fix bug with editing gnuplot graphs
+- try to get win32 LaTeX view working properly
 
 04/21/2002 version 0.994
 - fix bugs in win32 copy to clipboard
